--- a/app/package.json
+++ b/app/package.json
@@ -18,6 +18,7 @@
     "consolidate": "^0.14.1",
     "ejs": "^2.5.2",
     "mustache": "^2.2.1",
+    "node-jsx": "^0.13.3",
     "supervisor": "^0.11.0"
   }
 }
