--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
+    "css-loader": "^0.25.0",
     "express": "^4.14.0",
     "express-generator": "^4.13.4",
     "gulp": "^3.9.1",
@@ -25,6 +26,7 @@
     "react-redux": "^4.4.5",
     "redux": "^3.6.0",
     "redux-devtools": "^3.3.1",
+    "style-loader": "^0.13.1",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.15.1"
   }
