--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ./bin/www",
+    "go": "supervisor ./bin/www",
     "build": "webpack",
     "dev": "webpack-dev-server --port 9090 --devtool eval --progress --colors --hot --content-base build",
     "deploy": "NODE_ENV=production webpack -p --config webpack.production.config.js"
@@ -20,18 +22,18 @@
     "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
-    "consolidate": "^0.14.1",
-    "ejs": "^2.5.2",
-    "mustache": "^2.2.1",
-    "node-jsx": "^0.13.3",
-    "supervisor": "^0.11.0",
     "babel-core": "^6.14.0",
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
+    "consolidate": "^0.14.1",
     "css-loader": "^0.25.0",
+    "ejs": "^2.5.2",
     "express-generator": "^4.13.4",
     "gulp": "^3.9.1",
+    "jade": "^1.11.0",
+    "mustache": "^2.2.1",
+    "node-jsx": "^0.13.3",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
     "react-hot-loader": "^3.0.0-beta.3",
@@ -39,6 +41,7 @@
     "redux": "^3.6.0",
     "redux-devtools": "^3.3.1",
     "style-loader": "^0.13.1",
+    "supervisor": "^0.11.0",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.15.1"
   }
