--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./bin/www",
-    "go": "supervisor ./bin/www",
-    "build": "webpack",
-    "dev": "webpack-dev-server --port 9090 --devtool eval --progress --colors --hot --content-base build",
-    "deploy": "NODE_ENV=production webpack -p --config webpack.production.config.js"
+    "build:server": "babel src --out-dir build && cross-env NODE_ENV=production node ./build/server/bin/www",
+    "dev:server": "cross-env NODE_ENV=development babel-node ./src/server/bin/www",
+    "start": "cross-env NODE_ENV=production node ./build/server/bin/www",
+    "sup": "cross-env NODE_ENV=development supervisor ./build/server/bin/www",
+    "build:client": "webpack",
+    "dev:client": "webpack-dev-server --port 9090 --devtool eval --progress --colors --hot --content-base build",
+    "wp:deploy": "NODE_ENV=production webpack -p --config webpack.production.config.js"
   },
   "author": "",
   "license": "ISC",
@@ -22,15 +24,20 @@
     "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
+    "babel-cli": "^6.18.0",
     "babel-core": "^6.14.0",
     "babel-loader": "^6.2.5",
-    "babel-preset-es2015": "^6.14.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.18.0",
+    "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.11.1",
     "consolidate": "^0.14.1",
+    "cross-env": "^3.1.3",
     "css-loader": "^0.25.0",
     "ejs": "^2.5.2",
     "express-generator": "^4.13.4",
+    "extract-text-webpack-plugin": "^1.0.1",
     "gulp": "^3.9.1",
+    "http-proxy-middleware": "^0.17.3",
     "jade": "^1.11.0",
     "mustache": "^2.2.1",
     "node-jsx": "^0.13.3",
