--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
+    "autoprefixer": "^6.5.3",
     "babel-cli": "^6.18.0",
     "babel-core": "^6.14.0",
     "babel-loader": "^6.2.5",
@@ -33,14 +34,14 @@
     "consolidate": "^0.14.1",
     "cross-env": "^3.1.3",
     "css-loader": "^0.25.0",
-    "ejs": "^2.5.2",
     "express-generator": "^4.13.4",
     "extract-text-webpack-plugin": "^1.0.1",
     "gulp": "^3.9.1",
     "http-proxy-middleware": "^0.17.3",
-    "jade": "^1.11.0",
     "mustache": "^2.2.1",
     "node-jsx": "^0.13.3",
+    "postcss-loader": "^1.2.0",
+    "precss": "^1.4.0",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
     "react-hot-loader": "^3.0.0-beta.3",
