--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "consolidate": "^0.14.1",
     "cross-env": "^3.1.3",
     "css-loader": "^0.25.0",
+    "cssnano": "^3.9.1",
     "express-generator": "^4.13.4",
     "extract-text-webpack-plugin": "^1.0.1",
     "gulp": "^3.9.1",
@@ -53,6 +54,7 @@
     "redux-devtools": "^3.3.1",
     "style-loader": "^0.13.1",
     "supervisor": "^0.11.0",
+    "url-loader": "^0.5.7",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.15.1"
   }
